fix poem styling (left align)

--- a/app/assets/stylesheets/piece.css.sass
+++ b/app/assets/stylesheets/piece.css.sass
@@ -83,18 +83,7 @@
     .piece_header
         margin-bottom: 4ex
     .piececontents
-        margin:
-            top: 3ex
-            left: 3em
         font-family: Lora, serif
-    // .c1, .c0
-    //     margin-top: 0px
-    //     margin-bottom: 0px
-    // p:first-child
-    //     margin-top: 3ex
-    // .c2
-    //     margin-top: 3ex
-
     .songPart
         color: lightgray
         position: relative
@@ -108,7 +97,4 @@
     @extend .poem
     .piececontents
         font-size: 120%
-        margin-left: 120px
-        @media (max-width: 464px)
-            margin-left: 20px !important
         text-align: left
